Fixed ContextualLinks colors in dark mode

--- a/src/components/ContextualLinks/ContextualLinks.scss
+++ b/src/components/ContextualLinks/ContextualLinks.scss
@@ -3,7 +3,7 @@
 .contextual-links {
   margin: 12px 16px;
   border-top: 5px solid $postman-orange;
-  
+
   .contextual-links__section {
     margin-top: 24px;
     margin-bottom: 8px;
@@ -11,6 +11,7 @@
     font-weight: 600;
     color: $gray-3;
   }
+
   .contextual-links__link {
     margin-bottom: 12px;
   }
@@ -26,6 +27,7 @@
     color: $postman-orange;
     font-size: 14px;
     text-decoration: none;
+
     &:hover {
       color: $gray-3;
     }
@@ -33,8 +35,8 @@
 
   // tablet view
   @media (min-width: 767px) and (max-width: 990px) {
-      padding-bottom: 80px;
-      margin-left: 32px;
+    padding-bottom: 80px;
+    margin-left: 32px;
   }
 
 
@@ -42,4 +44,15 @@
   @media (max-width: 767px) {
     padding-bottom: 80px;
   }
+}
+
+
+@media(prefers-color-scheme: dark) {
+  .contextual-links {
+    .contextual-links__section {
+      color: #C7C3BD
+    }
+
+  }
+
 }
